<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="horizontal"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/dragdrop_showlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.45"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/workspace"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="0.10" >

                <LinearLayout
                    android:id="@+id/drop_layout"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" />
            </ScrollView>

            <LinearLayout
                android:id="@+id/undo_layout"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="0.45"
                android:background="@color/button_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewUndo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/undo"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_weight="0.60"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/addto_saved_project"
                android:textColor="@android:color/darker_gray"
                android:textSize="10sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="5dp" >

                <LinearLayout
                    android:id="@+id/projects_layout"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" />
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dragdrop_hidelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.50"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>