<com.app.glooworkspace.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
   android:id="@+id/slideLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/slide_inflate_layout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        layout="@layout/inflate_dropdown" />

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:orientation="vertical"
        android:visibility="visible"
        android:weightSum="4" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.20"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/gmail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/imageViewSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:src="@drawable/menu_option" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.20"
            android:orientation="horizontal"
            android:weightSum="2" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/trans_bg"
                android:padding="3dp"
                android:src="@drawable/search" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/trans_bg"
                android:padding="3dp"
                android:src="@drawable/search" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1.15"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_files"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
- 

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:weightSum="3" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/trans_bg"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/atoz"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/search" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/trans_bg"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/category"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
- 

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.45" >
- 

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/layout_list_items_show"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="left|center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp" />

                    <LinearLayout
                        android:id="@+id/layout_list_items_hideshadow"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="invisible" />
                </FrameLayout>
            </ScrollView>
        </LinearLayout>
- 

        <LinearLayout
            android:id="@+id/inflate_BottomBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone" >

            <include
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/inflate_bottom_bar" />
        </LinearLayout>
    </LinearLayout>

</com.app.glooworkspace.SlideHolder>